--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,12 @@ autobins     = false
 [features]
 default = []
 local_secrets = []
+# MQTT client selection (see .junie/plans/mqtt-tcp/plan.md)
+# By default we keep integration in placeholder/log-only mode.
+# Enable one of the following features to compile a concrete client path.
+mqtt_impl_rust_mqtt = ["dep:rust-mqtt"]      # Use rust-mqtt over smoltcp via embedded-io-async adapter
+mqtt_impl_embedded_mqttc = [] # Alternative client option (not enabled by default)
+mqtt_impl_mountain_mqtt = []  # Alternative client option (not enabled by default)
 
 [[bin]]
 name = "fevicol"
@@ -62,7 +68,7 @@ smoltcp = { version = "0.12.0", default-features = false, features = [
 ] }
 heapless = "0.8"
 static_cell = "2.1"
-rust-mqtt = { version = "0.3", default-features = false, features = ["defmt"] }
+rust-mqtt = { version = "0.3", default-features = false, features = ["defmt"], optional = true }
 embedded-nal-async = "0.8"
 
 
