--- a/src/bin/secrets.rs.example
+++ b/src/bin/secrets.rs.example
@@ -13,4 +13,4 @@ pub const WIFI_PASS: &str = "YourPassword";
 pub const MQTT_BROKER_HOST: &str = "192.168.0.200";
 pub const MQTT_BROKER_PORT: u16 = 1883;
 pub const MQTT_USERNAME: &str = "mqtt-user";
-pub const MQTT_PASSWORD: &str = VerySecretPassword;";
+pub const MQTT_PASSWORD: &str = "VerySecretPassword";
