Implement MQTT v5 support with client abstraction (#12)
* Add MQTT client abstraction with feature flags and discovery publishing

* Implement full MQTT v5 support with rust-mqtt and embassy-net integration

--- a/src/bin/secrets.rs.example
+++ b/src/bin/secrets.rs.example
@@ -10,3 +10,7 @@
 
 pub const WIFI_SSID: &str = "YourSSID";
 pub const WIFI_PASS: &str = "YourPassword";
+pub const MQTT_BROKER_HOST: &str = "192.168.0.200";
+pub const MQTT_BROKER_PORT: u16 = 1883;
+pub const MQTT_USERNAME: &str = "mqtt-user";
+pub const MQTT_PASSWORD: &str = "VerySecretPassword";
