--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
 	"name": "Fevicol ESP32-C6 Dev Container",
-	"image": "mcr.microsoft.com/devcontainers/rust:1-1-bookworm",
+	"image": "espressif/idf-rust:esp32c6_1.88.0.0",
 
 	"features": {
 		"ghcr.io/devcontainers/features/common-utils:2": {
